@@ -182,6 +182,8 @@ IDLE
 Tests
 -----
 
+- Issue #19320: test_tcl no longer fails when wantobjects is false.
+
 - Issue #19683: Removed empty tests from test_minidom.  Patch by Ajitesh Gupta.
 
 - Issue #19919: Fix flacky SSL test. connect_ex() sometimes returns
